vector second part